[package]
name = "multiread"
version = "0.1.0"
authors = ["Brian W. Wolter <brianwolter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
